; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/urlmon/extr_protocol.c_register_filter.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/urlmon/extr_protocol.c_register_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [35 x i8] c"CoInternetGetSession failed: %08x\0A\00", align 1
@mimefilter_cf = common dso_local global i32 0, align 4
@IID_IInternetProtocol = common dso_local global i32 0, align 4
@pjpegW = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"RegisterMimeFilter failed: %08x\0A\00", align 1
@gifW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @register_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_filter(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = call i64 @pCoInternetGetSession(i32 0, i32** %3, i32 0)
  store i64 %5, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @S_OK, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @ok(i32 %9, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i64 %10)
  %12 = load i64, i64* %2, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %33

14:                                               ; preds = %1
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @pjpegW, align 4
  %17 = call i64 @IInternetSession_RegisterMimeFilter(i32* %15, i32* @mimefilter_cf, i32* @IID_IInternetProtocol, i32 %16)
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* @S_OK, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = load i64, i64* %4, align 8
  %23 = call i32 @ok(i32 %21, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i64 %22)
  %24 = load i32*, i32** %3, align 8
  %25 = load i32, i32* @gifW, align 4
  %26 = call i64 @IInternetSession_RegisterMimeFilter(i32* %24, i32* @mimefilter_cf, i32* @IID_IInternetProtocol, i32 %25)
  store i64 %26, i64* %4, align 8
  %27 = load i64, i64* %4, align 8
  %28 = load i64, i64* @S_OK, align 8
  %29 = icmp eq i64 %27, %28
  %30 = zext i1 %29 to i32
  %31 = load i64, i64* %4, align 8
  %32 = call i32 @ok(i32 %30, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i64 %31)
  br label %52

33:                                               ; preds = %1
  %34 = load i32*, i32** %3, align 8
  %35 = load i32, i32* @pjpegW, align 4
  %36 = call i64 @IInternetSession_UnregisterMimeFilter(i32* %34, i32* @mimefilter_cf, i32 %35)
  store i64 %36, i64* %4, align 8
  %37 = load i64, i64* %4, align 8
  %38 = load i64, i64* @S_OK, align 8
  %39 = icmp eq i64 %37, %38
  %40 = zext i1 %39 to i32
  %41 = load i64, i64* %4, align 8
  %42 = call i32 @ok(i32 %40, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i64 %41)
  %43 = load i32*, i32** %3, align 8
  %44 = load i32, i32* @gifW, align 4
  %45 = call i64 @IInternetSession_UnregisterMimeFilter(i32* %43, i32* @mimefilter_cf, i32 %44)
  store i64 %45, i64* %4, align 8
  %46 = load i64, i64* %4, align 8
  %47 = load i64, i64* @S_OK, align 8
  %48 = icmp eq i64 %46, %47
  %49 = zext i1 %48 to i32
  %50 = load i64, i64* %4, align 8
  %51 = call i32 @ok(i32 %49, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i64 %50)
  br label %52

52:                                               ; preds = %33, %14
  %53 = load i32*, i32** %3, align 8
  %54 = call i32 @IInternetSession_Release(i32* %53)
  ret void
}

declare dso_local i64 @pCoInternetGetSession(i32, i32**, i32) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i64 @IInternetSession_RegisterMimeFilter(i32*, i32*, i32*, i32) #1

declare dso_local i64 @IInternetSession_UnregisterMimeFilter(i32*, i32*, i32) #1

declare dso_local i32 @IInternetSession_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
